# TickList

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  core.cpp  core.hpp  gui.cpp  gui.hpp  main.cpp
.github/workflows/: cmake-single-platform.yml
